# local-kubernetes-cluster

./: .dev.env  .dev2.env  .gitignore  .sonar.env  Dockerfile  Dockerfile.app2  README.md  Taskfile.yml  Tiltfile  alembic.ini  alembic2.ini  compose.yaml  filebeat.yml  pyproject.toml  sonar-project.properties
alembic/versions/: a2b3c4d5e6f7_create_posts_table.py
alembic2/: env.py
alembic2/versions/: c1aef9b57d26_create_users_table.py
collections/: API.postman_collection.json
collections/environments/: API.postman_environment.json  API2_native.postman_environment.json  API2_tilt.postman_environment.json  API_tilt.postman_environment copy.json  API_tilt.postman_environment.json
helm/: Chart.yaml  values.yaml
helm/argocd/: values.yaml
helm/monitoring/: values.yaml
helm/templates/: NOTES.txt  deployment.yaml
helm/vault/: values.yaml
helm2/: Chart.yaml  values.yaml
helm2/argocd/: values.yaml
helm2/monitoring/: values.yaml
helm2/templates/: ingress.yaml  secret.yaml  service.yaml
helm2/vault/: values.yaml
k8s/: deployment.yaml  k3d-config.yaml  secret.yaml.template
k8s/argocd/: app-dev.yaml  app-prod.yaml  app-staging.yaml  app2-dev.yaml  app2-prod.yaml  app2-staging.yaml  project.yaml
k8s/kustomize/base/: deployment.yaml  ingress.yaml  kustomization.yaml  secret.yaml  service.yaml
k8s/kustomize/base/app2/: deployment.yaml  ingress.yaml  kustomization.yaml  secret.yaml  service.yaml
k8s/kustomize/overlays/app2-dev/: deployment-patch.yaml  ingress-patch.yaml  kustomization.yaml
k8s/kustomize/overlays/app2-prod/: deployment-patch.yaml  hpa.yaml  ingress-patch.yaml  kustomization.yaml
k8s/kustomize/overlays/app2-staging/: deployment-patch.yaml  ingress-patch.yaml  kustomization.yaml
k8s/kustomize/overlays/dev/: .dev.secrets.env.example  deployment-patch.yaml  ingress-patch.yaml  kustomization.yaml
k8s/kustomize/overlays/prod/: deployment-patch.yaml  hpa.yaml  ingress-patch.yaml  kustomization.yaml
k8s/kustomize/overlays/staging/: deployment-patch.yaml  ingress-patch.yaml  kustomization.yaml
k8s/vault/: vault-dev.yaml
scripts/: argocd-down.ps1  argocd-install.ps1  argocd-setup.ps1  format_and_lint.ps1  k3d-down.ps1  k3d-redeploy.ps1  k3d-up.ps1  k8s-apply-secrets.ps1  kustomize-apply.ps1  monitoring-install.ps1  monitoring-uninstall.ps1  tilt-down.ps1  tilt-up.ps1  vault-dev-start.ps1  vault-k3d-setup.ps1  vault-render-env.ps1
src/: main.py
src/api/dependencies/: auth.py
src/api/routes/: auth.py  posts.py  root.py  users.py
src/core/: config.py  exceptions.py
src/db/: session.py
src/helpers/: config.py  security.py
src/helpers/config/: config.py
src/repositories/: post_repository.py  user_repository.py
src/schemas/: health.py  root.py
src/services/: auth_service.py  user_service.py
src2/: main.py  manage.py
src2/api/: router.py
src2/api/dependencies/: auth.py
src2/api/routes/: auth.py  health.py  posts.py  root.py  users.py
src2/apps/auth_app/: apps.py  service.py  urls.py  views.py
src2/apps/health/: apps.py  urls.py  views.py
src2/apps/posts/: apps.py  models.py  repository.py  serializers.py  service.py  urls.py  views.py
src2/apps/posts/migrations/: dj_posts_0001_initial.py
src2/apps/users/: models.py  repository.py  serializers.py  service.py  urls.py  views.py
src2/apps/users/migrations/: 0001_initial.py
src2/core/: authentication.py  exceptions.py  settings.py  urls.py
src2/db/: session.py
src2/db/models/: post.py  user.py
src2/helpers/: exceptions.py  logging_setup.py  security.py
src2/helpers/config/: config.py
src2/repositories/: post_repository.py  user_repository.py
src2/schemas/: post.py
src2/services/: auth_service.py  post_service.py  user_service.py
tasks/: app2-image-build-push.ps1  cleanup.ps1  dev_uv_environment.ps1  generate_diagrams.ps1  k3d.ps1  kustomize.ps1  run_native_dev_application.ps1  run_windows_dev_application.ps1  static_analysis_and_tests.ps1  test_native_api.ps1  test_tilt_api.ps1  tilt.ps1  wait_for_native_api.ps1  wait_for_native_api2.ps1  wait_for_tilt_api.ps1  wait_for_tilt_api2.ps1  wait_for_windows_api.ps1
test/: test_main.py
tests/: test_main.py
tests/helpers/config/: test_config.py
tests/src/: test_db.py
tests/src/api/: test_api.py
tests/src/core/: test_security.py
tests2/: conftest.py  test_api.py  test_db.py  test_security.py  test_serializers.py
tests2/helpers/: test_logging.py
tests2/helpers/config/: test_config.py
tests2/src/: test_db.py
tests2/src/api/: test_api.py
tests2/src/core/: test_security.py
tests2/utils/: db_config.py
vault/: vault-agent.hcl
