[project]
name = "python-project"
version = "1.0.0"
description = "Simple template project for Python Application"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "aiosqlite>=0.22.1",
    "fastapi>=0.131.0",
    "hypothesis>=6.151.9",
    "opentelemetry-exporter-otlp-proto-grpc>=1.42.1",
    "opentelemetry-instrumentation-urllib3>=0.63b1",
    "opentelemetry-sdk>=1.42.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pytest-asyncio>=1.3.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "sqlalchemy>=2.0.46",
    "types-passlib>=1.7.7.20260211",
    "types-python-jose>=3.5.0.20250531",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.16.0",
    "pip-audit>=2.9.0",
    "pydeps>=3.0.6",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.11.13",
    "vulture>=2.16",
]

[tool.setuptools]
packages = ["allocation", "helpers"]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
# Exclude a variety of commonly ignored directories.
preview = true
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 120
indent-width = 4
# Assume Python 3.14
target-version = "py314"

[tool.ruff.lint]
select = [
    # Pyflakes (F), Pycodestyle (E), isort, Pycodestyle warnings (W), Flake8-bugbear(B), Quotes style (Q)
    "F",
    "E",
    "I001",
    "W",
    "B",
    "Q",
    # flake8-bandit replacing bandit tool (S), unusued arguments (ARG), datetime zone (DTZ), flake8-logging (G)
    "S",
    "ARG",
    "DTZ",
    "G",
    # string concat style (ISC), no arg exception style (RSE), specific rule codes when ignoring (PGH004)
    "ISC",
    "RSE",
    "PGH004",
    # flake8 PIE (PIE), pytest (PT), Ruff specific, flake8 simplify (SIM), flake8 type checking imports (TCH)
    "PIE",
    "PT",
    "RUF",
    "SIM",
    "TCH",
    # exception handling (TRY), core upgrades/deprecations (UP), sys.version (YTT), FIXME comments
    "TRY",
    "UP",
    "YTT",
    "FIX001",
    # flake8 comprehensions (C4), performance (PERF), flake8-async, builtin shadowing (A), pep8 names (N)
    "C4",
    "PERF",
    "ASYNC",
    "A",
    "N",
    # Debugger calls, print calls, fstring vs static join (FLY)
    "T10",
    "T20",
    "FLY",
    # 'I' for import-related issues, 'F401' for unused imports
    "I",
    "F401",
    # if want type annotations on everything (ANN), docs (D)
    # "ANN", "D"
    "E301",
    "E302",
    "E303",
    "E305",
    "E306",
]
# S101: we don't optimize out sanity asserts.
# PT001 Checks for argument-free @pytest.fixture() decorators with or without parentheses, depending on the lint.flake8-pytest-style.fixture-parentheses setting
# TRY002 require custom exc.
# TRY003 long exc messages.
# UP040 type keyword was introduced in Python 3.12 by PEP 695 but isn't supported by mypy yet
ignore = ["S101", "PT001", "TRY002", "TRY003", "UP040", "TC002", "TC003"]
# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = [
    "A",
    "C",
    "C4",
    "D",
    "E",
    "F",
    "G",
    "I",
    "N",
    "Q",
    "S",
    "T",
    "W",
    "ANN",
    "ARG",
    "BLE",
    "COM",
    "DJ",
    "DTZ",
    "EM",
    "ERA",
    "EXE",
    "FBT",
    "FLY",
    "ICN",
    "INP",
    "ISC",
    "NPY",
    "PD",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "SLF",
    "T10",
    "T20",
    "TCH",
    "TID",
    "TRY",
    "UP",
    "YTT",
    "I001",
    "E301",
    "E302",
    "E303",
    "E305",
    "E306",
]
unfixable = ["B"]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$" # Allow unused variables when underscore-prefixed.

[tool.ruff.lint.per-file-ignores]
# last checked EnvLoaderMixin + JsonSchemaMixin was having problems with X | Y annotations
"app/{config,data_types}.py" = ["UP007"]
"components/*.py" = ["UP007"]
# F401: ignore unused imports in `__init__.py` files
"__init__.py" = ["F401"]
# S311: (Standard pseudo-random generators are not suitable for cryptographic purposes)
# ARG001: unused args common for e.g. test fixtures
"tests/*" = ["S311", "ARG001", "ANN"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
docstring-code-format = true
